--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
     "fullpage-vue": "^2.1.1",
+    "three": "^0.125.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
