--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "fullpage-vue": "^2.1.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "three": "^0.125.1",
     "vue": "^2.6.11"
   },
